Source/WebInspectorUI/UserInterface/Views/ScriptTimelineDataGridNode.js
@@ -71,9 +71,18 @@ WebInspector.ScriptTimelineDataGridNode.prototype = {
 
     get data()
     {
-        var startTime = Math.max(this._rangeStartTime, this._record.startTime);
-        var duration = Math.min(this._record.startTime + this._record.duration, this._rangeEndTime) - startTime;
+        var startTime = this._record.startTime;
+        var duration = this._record.startTime + this._record.duration - startTime;
         var callFrameOrSourceCodeLocation = this._record.initiatorCallFrame || this._record.sourceCodeLocation;
+
+        // COMPATIBILITY (iOS8): Profiles included per-call information and can be finely partitioned.
+        if (this._record.profile) {
+            var oneRootNode = this._record.profile.topDownRootNodes[0];
+            if (oneRootNode && oneRootNode.calls) {
+                startTime = Math.max(this._rangeStartTime, this._record.startTime);
+                duration = Math.min(this._record.startTime + this._record.duration, this._rangeEndTime) - startTime;
+            }
+        }
 
         return {eventType: this._record.eventType, startTime, selfTime: duration, totalTime: duration,
             averageTime: duration, callCount: 1, location: callFrameOrSourceCodeLocation};
